# spacedude

./: .gitignore  CMakeLists.txt  Makefile  spacedude
cmake/: FindSDL2_image.cmake
src/: App.cpp  App.hpp  Asteroid.cpp  Asteroid.hpp  Bullet.cpp  Bullet.hpp  Dude.cpp  Dude.hpp  Entity.cpp  Entity.hpp  Game.cpp  Game.hpp  Matrix.hpp  Player.cpp  Player.hpp  SDLContext.cpp  SDLContext.hpp  Shield.cpp  Shield.hpp  Sprite.cpp  Sprite.hpp  Vector.hpp  main.cpp
